--- a/examples/Simple neural network examples.ipynb
+++ b/examples/Simple neural network examples.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Two Simple Neural Network Examples\n",
+    "\n",
+    "This notebook introduces two examples showing how to create a simple neural network for classification: color classification and left-right classification. The dataset used here are self-created and very small, therefore, it only gives you an idea of how to start. These two examples can refer to neural network section at `ml5.js`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,7 +22,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simple Color Classification"
+    "### Simple Color Classification  \n",
+    "\n",
+    "This example will take rbg values as inputs and color name as outputs. The format is showned below:\n",
+    "- x: {'r':255, 'g':1, 'b':0}\n",
+    "- y: 'color': red-ish\n",
+    "\n",
+    "The steps to create a neural network:\n",
+    "1. create a network object  \n",
+    "2. set up options for the network \n",
+    "3. initialize the network \n",
+    "4. feed in the data\n",
+    "5. train the network  \n",
+    "6. classify on new data"
    ]
   },
   {
@@ -24,7 +45,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72650abfee0d4790a61e24bafeb781cd",
+       "model_id": "ce73143b2e654467bbb0529cc3dcd7b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,16 +60,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..........Model is created\n"
+      "......Model is created\n"
      ]
     }
    ],
    "source": [
-    "nn = ml5_nn.neuralNetwork()\n",
+    "nn = ml5_nn.neuralNetwork() # create network object\n",
     "nn.options['debug']=True\n",
-    "nn.options['task']='classification'\n",
-    "nn.initialize_framework()\n",
-    "# test.debugging_display()"
+    "nn.options['task']='classification' # set the task to classification\n",
+    "nn.initialize_framework() # initialize the framework of the network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After initialize the network, we can add data samples to it. There are six samples with three samples for each of two colors (red and blue). The function `add_data(input, output)` is used to add samples to the network. What need to be carefully is that the format of both inputs and outputs should be in a dictionary or json.   \n",
+    "For example, \n",
+    "- input: `{'r': 255, 'g': 1, 'b': 0}`\n",
+    "- output: `{'color': 'red-ish'}`"
    ]
   },
   {
@@ -57,6 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# prepare the dataset\n",
     "data = [\n",
     "  {'r':255, 'g':1, 'b':0, 'color':'red-ish'},\n",
     "  {'r':254, 'g':0, 'b':0, 'color':'red-ish'},\n",
@@ -73,10 +104,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# feed data into the network\n",
     "for d in data:\n",
     "    i = {'r':d['r'], 'g': d['g'], 'b': d['b']}\n",
     "    o = {'color': d['color']}\n",
     "    nn.add_data(i,o)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalization is an option before training which is to scale the data at the same level, leading network easier to converge. We set a small value for epochs and batch size."
    ]
   },
   {
@@ -88,31 +127,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "............................................................................................done\n"
+      ".....................done\n"
      ]
     }
    ],
    "source": [
     "nn.normalize_data()\n",
     "trainingOptions = {\n",
-    "  'epochs': 80,\n",
-    "  'batchSize': 12\n",
+    "  'epochs': 20,\n",
+    "  'batchSize': 1\n",
     "}\n",
     "nn.train_data(trainingOptions)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# nn.save()"
+    "Now, we already have our trained network. We can start to test on several unseen samples. The list `classify_callback_list` stores all the predictions which allows you to check the prediction value each time.   \n",
+    "The first sample is classified to red-ish with 0.99 confidence, and the second sample is classified to blue-ish with 0.98 confidence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,21 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'red-ish': 0.9900833964347839,\n",
+       "[{'red-ish': 0.9924579858779907,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.9900833964347839},\n",
-       " {'blue-ish': 0.009916686452925205,\n",
+       "  'confidence': 0.9924579858779907},\n",
+       " {'blue-ish': 0.007542089559137821,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.009916686452925205}]"
+       "  'confidence': 0.007542089559137821}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,26 +204,26 @@
     }
    ],
    "source": [
-    "nn.classify_data({'r': 0, 'g': 0, 'b': 255})"
+    "nn.classify_data({'r': 0, 'g': 0, 'b': 252})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'blue-ish': 0.9839764833450317,\n",
+       "[{'blue-ish': 0.9818068742752075,\n",
        "  'label': 'blue-ish',\n",
-       "  'confidence': 0.9839764833450317},\n",
-       " {'red-ish': 0.01602357067167759,\n",
+       "  'confidence': 0.9818068742752075},\n",
+       " {'red-ish': 0.018193155527114868,\n",
        "  'label': 'red-ish',\n",
-       "  'confidence': 0.01602357067167759}]"
+       "  'confidence': 0.018193155527114868}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,18 +236,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using saved model"
+    "#### Using saved model \n",
+    "\n",
+    "Instead of training a new network, you can load the network you trained previously. The following trained network is the saved version model of color classification network. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e766b43d4014460da6e695ca8c1be2e9",
+       "model_id": "fd8f5c8f7fe34db2a39b8ed89a428b4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +316,7 @@
        "  'confidence': 0.009034055285155773}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +349,7 @@
        "  'confidence': 0.014638460241258144}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,16 +363,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___________\n",
+    "### Left-Right Classification  \n",
     "\n",
-    "### Simple Classification"
+    "The following example can refer to a simple network example in [`ml5.js`](https://github.com/ml5js/ml5-library/tree/main/examples/p5js/NeuralNetwork/NeuralNetwork_Simple_Classification). We take a numeric value as input and left or right value as output. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8983c0e16004069bea2095af727cdae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(neuralNetwork(status='deferring flush until render'), Text(value='deferring flush until render'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "......Model is created\n"
+     ]
+    }
+   ],
    "source": [
     "options = {\n",
     "  'inputs': 1,\n",
@@ -345,13 +407,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "500 samples of data is generated with integer numbers in [0,200) as left and in [200,400) as right."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "for i in range(400):\n",
+    "for i in range(500):\n",
     "    if i%2==0:\n",
     "        x = np.random.randint(0, 200)\n",
     "        nn1.add_data( [x],  ['left'])\n",
@@ -362,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,13 +440,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...........................................................................................done\n"
+     ]
+    }
+   ],
    "source": [
     "trainingOptions={\n",
-    "    'batchSize': 24,\n",
-    "    'epochs': 32\n",
+    "    'batchSize': 16,\n",
+    "    'epochs': 35\n",
     "  }\n",
     "  \n",
     "nn1.train_data(trainingOptions)"
@@ -385,28 +462,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'left': 0.9932568073272705,\n",
+       "  'label': 'left',\n",
+       "  'confidence': 0.9932568073272705},\n",
+       " {'right': 0.0067431312054395676,\n",
+       "  'label': 'right',\n",
+       "  'confidence': 0.0067431312054395676}]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "nn1.classify_data([300])"
+    "nn1.classify_data([56])\n",
+    "nn1.classify_callback_list[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'right': 0.9998488426208496,\n",
+       "  'label': 'right',\n",
+       "  'confidence': 0.9998488426208496},\n",
+       " {'left': 0.00015111886023078114,\n",
+       "  'label': 'left',\n",
+       "  'confidence': 0.00015111886023078114}]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "nn1.classify_callback_list"
+    "nn1.classify_data([300])\n",
+    "nn1.classify_callback_list[-1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
