--- a/examples/Image classifier on bird examples.ipynb
+++ b/examples/Image classifier on bird examples.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image Classifier\n",
+    "\n",
+    "`ml5_ipynb` also introduces a class of image classification specifically using pre-trained models such as MobileNet, Darknet, and DoodleNet. In this example, MobileNet will be used to classify on bird images. There are two ways to read in image data to model, one is image path, another is to feed in image data array. We will show these two ways separately.  \n",
+    "\n",
+    "For this example, you can refer to `ml5.js` [image classification](https://github.com/ml5js/ml5-library/tree/main/examples/p5js/ImageClassification/ImageClassification)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -45,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa33c608828>"
+       "<matplotlib.image.AxesImage at 0x7fa17ec16ac8>"
       ]
      },
      "execution_count": 4,
@@ -73,7 +84,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## using local file path"
+    "## Using local file path\n",
+    "\n",
+    "This first way to feed in image data is using local image file path. You can specify the width and height of the image when using `classify_data` function. The class variable `classify_callback_list` allows you to check the classification result."
    ]
   },
   {
@@ -84,7 +97,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa0573209cc644f78f45b8b62d57b8af",
+       "model_id": "7062573c94a3419ba53bdc67a8af63ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..........Model is ready\n"
+      ".............Model is ready\n"
      ]
     }
    ],
@@ -153,7 +166,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## using python image array"
+    "The result will display top 3 class labels in order of confidence scores. The model classifies this image as American robin with 0.93 confidence. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using python image array\n",
+    "\n",
+    "The second way to feed in data is to convert image to an nested array of pixel values or a flatten list of pixel values."
    ]
   },
   {
@@ -164,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c52b7affa01e432696de41ddf61357f3",
+       "model_id": "1367b1783d764e678c6957802be15831",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "......Model is ready\n"
+      "........Model is ready\n"
      ]
     }
    ],
@@ -193,12 +215,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = img_rgba.flatten().tolist()"
+    "data = img_rgba.flatten().tolist() # convert it to a flatten list"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +268,7 @@
        "   'confidence': 0.0029059851076453924}]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
