--- a/examples/Load keras saved model using imageClassifier.ipynb
+++ b/examples/Load keras saved model using imageClassifier.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "502ce0a01f044fc182a8ae5c610768cc",
+       "model_id": "38c888a3636d4102a2baceec44faa11e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..............Model is ready\n"
+      "..........................................................Model is ready\n"
      ]
     }
    ],
@@ -129,20 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..done\n"
+      ".......done\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68c569de2e2c4e5484da4a291d4c1c74",
+       "model_id": "ffd4e0b92b1846b79b0ca41ce970f0af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,13 +158,6 @@
     "img_url= 'pic/dobby_online1.jpg'\n",
     "predict(img_url,'dobby')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
