--- a/examples/Object detection comparison between yolo and cocossd.ipynb
+++ b/examples/Object detection comparison between yolo and cocossd.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# YOLO vs. CocoSsd\n",
     "\n",
-    "In this notebook, we will perform a comparison between yolo and cocossd."
+    "In this notebook, we will perform object detection using both yolo and cocossd, and make a comparison between them at the end."
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,10 +37,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe0cc0c0c18>"
+       "<matplotlib.image.AxesImage at 0x7fe9abbdf438>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fae0782658a2447c861d55f057f029a6",
+       "model_id": "3806799b8f1746678fbe536c37ef08be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "........Model is ready\n"
+      "................................Model is ready\n"
      ]
     }
    ],
@@ -109,34 +109,83 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".........done\n",
-      "CPU times: user 2.71 s, sys: 103 ms, total: 2.81 s\n",
-      "Wall time: 3.89 s\n"
-     ]
-    }
-   ],
    "source": [
-    "yolo.image_detect(img_rgba,width=width,height=height)"
+    "### CocoSsd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57db4a45af484c0bbbe896710110bb7c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(ObjectDetector(status='deferring flush until render'), Text(value='deferring flush until render…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...........................................................................Model is ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "coco = ml5_detector.ObjectDetector('cocossd')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison \n",
+    "\n",
+    "For the image example, yolo only detects the person on the left side while cocossd detects both person and cow (actually it is rhinoceros). In theory, cocossd performs better yolo in multi-object detections, which can be seen in the following results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare(img_array, width, height):\n",
+    "    yolo.image_detect(img_rgba,width=width,height=height)\n",
+    "    coco.image_detect(img_rgba,width=width,height=height)\n",
+    "    print(\"yolo\")\n",
+    "    yolo.draw_bounding_box(img_rgba)\n",
+    "    print(\"coco\")\n",
+    "    coco.draw_bounding_box(img_rgba)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "person 44 0 163 387\n"
+      "......done\n",
+      ".....done\n",
+      "yolo\n",
+      "person 44 0 163 387\n",
+      "coco\n",
+      "person 34 0 197 412\n",
+      "cow 303 74 326 234\n"
      ]
     },
     {
@@ -150,81 +199,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "yolo.draw_bounding_box(img_rgba)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CocoSsd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af62e8fc808e41bdabc58dde97043b95",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(ObjectDetector(status='deferring flush until render'), Text(value='deferring flush until render…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".........Model is ready\n"
-     ]
-    }
-   ],
-   "source": [
-    "coco = ml5_detector.ObjectDetector('cocossd')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "........done\n",
-      "CPU times: user 2.71 s, sys: 99.3 ms, total: 2.8 s\n",
-      "Wall time: 3.77 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "coco.image_detect(img_rgba,width=width,height=height)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "person 34 0 197 412\n",
-      "cow 303 74 326 234\n"
-     ]
     },
     {
      "data": {
@@ -240,15 +214,8 @@
     }
    ],
    "source": [
-    "coco.draw_bounding_box(img_rgba)"
+    "compare(img_rgba, width = width, height = height)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
