--- a/examples/Object Detection using YOLO.ipynb
+++ b/examples/Object Detection using YOLO.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Object detection is a CV technique to identify and localize objects either on static images or in real time setting. `YOLO`(You Only Look Once) is one of models that can perform well on object detection tasks. It is a real-time detection algorithm.\n",
     "\n",
-    "In `ml5_ipynb`, `ObjectDetector` uses `YOLO` by default. In this notebook, we will perform obejct detection on several images."
+    "In `ml5_ipynb`, `ObjectDetector` uses `YOLO`(version 1) by default. In this notebook, we will perform obejct detection on several images."
    ]
   },
   {
@@ -33,7 +33,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
