--- a/examples/Word2vec widget.ipynb
+++ b/examples/Word2vec widget.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# Word2Vec model widgets\n",
     "\n",
-    "This notebook introduces several examples of linking word2vec model in `ml5_ipynb` with jupyter widget `ipywidgets` to produce outputs."
+    "This notebook introduces several examples of linking word2vec model in `ml5_ipynb` with jupyter widget `ipywidgets` to produce outputs.  \n",
+    "The model used contains 300-dimension embeddings for 10000 most common English words. There are smaller models in data folder.  \n",
+    "\n",
+    "This example can refer to an word2vec [example](https://github.com/ml5js/ml5-library/tree/main/examples/p5js/Word2Vec/Word2Vec_Interactive/data) in ml5.js\n",
+    "\n",
+    "**Note:** Using words not in the model embeddings will result in errors."
    ]
   },
   {
@@ -27,7 +32,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78fc7b51804d441b9e8662a42084adca",
+       "model_id": "e7e9f4b158dd46528faa376c2a0a8fcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..................Model is ready\n"
+      ".................Model is ready\n"
      ]
     }
    ],
@@ -54,12 +59,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What are the Top 3 nearest words?"
+    "## What are the Top 3 nearest words?\n",
+    "\n",
+    "The following uses `nearest(word)` function to calculate the cosine distance and output the top 3 words with smallest distance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,13 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c89bf11e0c145ea92acf8864e987443",
+       "model_id": "553c66d1677642679c6a04555b7574a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,12 +135,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What's the Top 3 words between two words?"
+    "## What's the Top 3 words between two words?\n",
+    "\n",
+    "The following uses `average([word1,word2])` function to calculate the average of embedding of two words and output the top 3 words similar to the average embedding."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "297caa7122a6493b93468cfd82b55cad",
+       "model_id": "b638d740bf894cc3a592957b37855893",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,12 +217,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analogy"
+    "## Analogy\n",
+    "\n",
+    "Analogy is to show how two things are similar to each other. Analogy of word embedding can refer to element-wise addition and subtraction. It is a \"word algebra\".   \n",
+    "For example, king is to queen as man is to woman. The resulting word is determined by the following formula.\n",
+    "```\n",
+    "vector('queen') - vector('king') + vector('man')\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,24 +271,26 @@
     "            print('Oops! Please type in other words!')\n",
     "            return\n",
     "        sub_w = sub_list[0]['word']\n",
-    "        w2v.add([iw2,sub_w])\n",
+    "        w2v.add([sub_w,iw2])\n",
     "        add_list = w2v.add_results[-1]\n",
     "        if not add_list:\n",
     "            print('Oops! No analogy for this example!')\n",
-    "        add_word = add_list[0]['word']\n",
-    "        analogy_output.value = add_word\n",
+    "        add_word = [i['word']+\"(\"+ str(round(i['distance'],2))+\")\" for i in add_list[:3]]\n",
+    "        analogy_output.value = \" , \".join(add_word)\n",
     "    analogy_button.value = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3a8bf3e04d04004ae2bb6e99603d53a",
+       "model_id": "e1e1b686fac642748bf5a9837e2447e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,13 +311,6 @@
     "                            is_word2,analogy_button]),\n",
     "              analogy_output,analogy_out])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
