--- a/examples/Color classification widget.ipynb
+++ b/examples/Color classification widget.ipynb
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73263bbd049e4fef9d3990b618b3fdb3",
+       "model_id": "7a790733c20f4012bf16cae0bfa6165d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..........Model is created\n"
+      "......Model is created\n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "............................................................................................................................................done\n"
+      "...................................................................................................................................................................................................................................................................................................................................................................................................done\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e50e6f1f3314424da5c09269b1f26487",
+       "model_id": "a430af6c64314a1daaaaf90158fb8342",
        "version_major": 2,
        "version_minor": 0
       },
