--- a/examples/Word2vec widget.ipynb
+++ b/examples/Word2vec widget.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7e9f4b158dd46528faa376c2a0a8fcb",
+       "model_id": "adcc24e553764d22ab238ff790faf87b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".................Model is ready\n"
+      "....................Model is ready\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "553c66d1677642679c6a04555b7574a7",
+       "model_id": "b447deaafbab4bae95b6e1deb7ecd9c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b638d740bf894cc3a592957b37855893",
+       "model_id": "aefd12f9c0174f99acae3652132b0a51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -290,7 +290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1e1b686fac642748bf5a9837e2447e1",
+       "model_id": "683c905bf6824e67ab3bae0c9e57659d",
        "version_major": 2,
        "version_minor": 0
       },
